testsuite/tests/v1/patterns/complex/invalid_selector_call/test.out
Error: Invalid selector call
   ╭─[ <working-dir>/script.lkql:2:23 ]
   │
 2 │ print(root is FooNode(any "a" is FooNode))
   │                       ─────────┬────────  
   │                                ╰────────── It must be either a name or a call expression
───╯
